restructure; fix scripts; update readme;

--- a/src/page-2.html
+++ b/src/page-2.html
@@ -1,6 +1,6 @@
 ---
 title: This is page 2
-layout: "base.njk"
+layout: "base"
 ---
-
 <p>Hello from the second page.</p>
+<p>I'm generated from an HTML file.</p>
